--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "description": "Proyecto de prueba para convertir un .csv en json y enviarlo a una ruleta para dinámicas en el aula",
   "main": "index.ts",
   "scripts": {
-    "test": "tsc && nodemon src/index.js -e js,mjs,json,ejs,css,ts",
-    "start": "tsc && node src/index.ts",
+    "test": "nodemon src/index.js -e js,mjs,json,ejs,css,ts",
+    "start": "node src/index.ts",
     "tsc:w": "tsc -w"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LuluAylen00/pokemart.git"
+    "url": "git+https://github.com/LuluAylen00/dh-roulette.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/LuluAylen00/pokemart/issues"
+    "url": "https://github.com/LuluAylen00/dh-roulette/issues"
   },
-  "homepage": "https://github.com/LuluAylen00/pokemart#readme",
+  "homepage": "https://github.com/LuluAylen00/dh-roulette#readme",
   "dependencies": {
     "convert-csv-to-json": "^1.3.3",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "generator-code": "^1.6.14",
     "simple-excel-to-json": "^2.3.0"
   },
   "devDependencies": {
