--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "generator-code": "^1.6.14",
+    "multer": "^1.4.5-lts.1",
     "simple-excel-to-json": "^2.3.0"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.8",
     "nodemon": "^2.0.19"
   }
