--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "module": "commonjs",
         "allowSyntheticDefaultImports": true,
         "sourceMap": true,
-        "jsx": "react"
+        "jsx": "react",
+        "outDir": "build"
     },
     "exclude": ["node_modules"]
 }
