--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "generator-code": "^1.6.14",
     "multer": "^1.4.5-lts.1",
     "simple-excel-to-json": "^2.3.0"
